# twitter-quotes-bot

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/file_io/: mod.rs  test.rs
src/format_quote/: mod.rs  test.rs
src/twitter_io/: .mod.rs.swn  constant.rs  mod.rs  test.rs
testing-data/: test1.md  test2.md  test3.md  test4.md  test5.md
